--- a/blog/source/_posts/波动光学.md
+++ b/blog/source/_posts/波动光学.md
@@ -8,7 +8,7 @@ date: 2023/1/31 10:01:25
 categories: [optics] 
 # 标签
 tags:
-  - C++
+  - 光学
 # 作者
 #author: Reuben
 # 缩略图
@@ -17,6 +17,10 @@ thumbnail:
 cover: true
 # 显示目录
 toc: true
+#评论
+gitalk:
+  config:
+    id: /3/
 # 启用插件
 plugins:
   - mathjax
