--- a/blog/source/_posts/微积分.md
+++ b/blog/source/_posts/微积分.md
@@ -192,11 +192,17 @@ $$
 
 **交错级数审敛法**
 
-若$u_n \ge u_{n+1}$，且$\lim_{n \rightarrow \infty}u_n=0$，则级数$\sum^{\infty}_{n=1}(-1)^{n-1}u_n$收敛，且其和$s \le u_1$，其余项$|r_n|\le u_{n+1}$
+若$u_n \ge u_{n+1}$ ，且$\lim_{n \rightarrow \infty}u_n=0$
+
+则级数 $\sum^{\infty}_{n=1}(-1)^{n-1}u_n$ 收敛
+
+且其和 $s \le u_1$ ，其余项 $|r_n|\le u_{n+1}$ 
 
 #### 绝对收敛与条件收敛
 
-对于一级数$A=\sum^{\infty}_{n=1}u_n$，其各项取绝对值，得到新正项级数$B=\sum^{\infty}_{n=1}|u_n|$
+对于一级数$A=\sum^{\infty}_{n=1}u_n$，其各项取绝对值
+
+得到新正项级数$B=\sum^{\infty}_{n=1}|u_n|$
 
 定理：若B收敛，则A收敛（所以这就是我们为什么要研究正项级数）
 
@@ -458,15 +464,7 @@ $$
 c_n=\frac{1}{2l}\int^l_{-l}f(x)e^{-i\frac{n\pi x}{l}}\mathrm{d}x
 $$
 
-##### 例题
 
-已知周期为2的电压信号函数
-$$
-u(t)=e^{-t}，t\in [0,2]
-$$
-将其展开为复数形式的傅里叶级数
-
-![傅里叶变换](/images/傅里叶变换.png)
 
 ## 多元函数
 
