--- a/blog/source/_posts/optics/反射和折射.md
+++ b/blog/source/_posts/optics/反射和折射.md
@@ -56,9 +56,9 @@ plugins:
 
 经过复杂的推导，我们能得到
 $$
-r_p=\frac{E_{1p}’}{E_{1p}}=\frac{\tan(\mathrm{i_1}-\mathrm{i_2})}{\tan(\mathrm{i_1}+\mathrm{i_2})}	\\
-r_s=\frac{E_{1s}’}{E_{1s}}=-\frac{\sin(\mathrm{i_1}-\mathrm{i_2})}{\sin(\mathrm{i_1}+\mathrm{i_2})}	\\
-t_p=\frac{E_{2p}}{E_{1p}}=\frac{2\cos \mathrm{i_1}\sin \mathrm{i_2}}{\sin(\mathrm{i_1}+\mathrm{i_2}) \cos (\mathrm{i_1}-\mathrm{i_2})}	\\
+r_p=\frac{E_{1p}’}{E_{1p}}=\frac{\tan(\mathrm{i_1}-\mathrm{i_2})}{\tan(\mathrm{i_1}+\mathrm{i_2})}	\\\\
+r_s=\frac{E_{1s}’}{E_{1s}}=-\frac{\sin(\mathrm{i_1}-\mathrm{i_2})}{\sin(\mathrm{i_1}+\mathrm{i_2})}	\\\\
+t_p=\frac{E_{2p}}{E_{1p}}=\frac{2\cos \mathrm{i_1}\sin \mathrm{i_2}}{\sin(\mathrm{i_1}+\mathrm{i_2}) \cos (\mathrm{i_1}-\mathrm{i_2})}	\\\\
 t_s=\frac{E_{2s}}{E_{1s}}=\frac{2\cos \mathrm{i_1}\sin \mathrm{i_2}}{\sin(\mathrm{i_1}+\mathrm{i_2})}
 $$
 
@@ -134,9 +134,9 @@ $$
 当垂直入射时，带入菲涅尔方程，得到
 $$
 \begin{cases}
-r_p=\frac{n_2-n_1}{n_2+n_1}	\\
-r_s=-r_p	\\
-t_p=\frac{2n_1}{n_1+n_2}	\\
+r_p=\frac{n_2-n_1}{n_2+n_1}	\\\\
+r_s=-r_p	\\\\
+t_p=\frac{2n_1}{n_1+n_2}	\\\\
 t_s=t_p
 \end{cases}
 $$
@@ -181,7 +181,7 @@ $$
 - 阻尼率（damping rate，用$\gamma$表示）
 - 电荷密度（density of electron，用$n$表示）
 
-这个推导很复杂，又设计复变函数之类的，直接给结论：当平面波垂直射向金属时，$R \approx 1$
+这个推导很复杂，又涉及复变函数之类的，直接给结论：当平面波垂直射向金属时，$R \approx 1$
 
 #### 布鲁斯特角
 
