--- a/blog/source/_posts/graphics/邻域搜索.md
+++ b/blog/source/_posts/graphics/邻域搜索.md
@@ -33,7 +33,7 @@ plugins:
 
 我们在粒子作用范围构建一个网格，网格的边长等于核半径$\hslash $，我们发现网格是一个立方体，而核函数是一个球，$(i,j,k)$表示粒子所在网格的坐标
 
-<img src="../../images/grid.png" alt="grid" style="zoom: 33%;" />
+<img src="/images/grid.png" alt="grid" style="zoom: 33%;" />
 
 ### 球的作用范围
 
@@ -124,7 +124,7 @@ int Hash(int3 cell) {
 
 我们可以使用[紧凑哈希](https://github.com/InteractiveComputerGraphics/CompactNSearch)来节约内存
 
-<img src="../../images/紧凑哈希.png" alt="紧凑哈希" style="zoom:50%;" />
+<img src="/images/紧凑哈希.png" alt="紧凑哈希" style="zoom:50%;" />
 
 
 
