--- a/blog/source/_posts/optics/干涉.md
+++ b/blog/source/_posts/optics/干涉.md
@@ -26,7 +26,7 @@ plugins:
 
 ## 内容概述
 
-- 干涉（Interference）证明了光的波性
+- 干涉（Interference），光的叠加不满足线性叠加，证明了光的波性
 - 干涉条件
 - 干涉方法与装置
 - 干涉仪
@@ -35,11 +35,20 @@ plugins:
 
 干涉让光学从线性光学变成非线性光学
 
-我们在学习牛顿运动定律时，认为力是一种向量，可以被分解、叠加，两个力的合力满足平行四边形法则。在研究带电粒子在电磁场中运动时，也认为电场强度$E$也可以叠加
+### 线性光学
 
-我们在图形学做半球面入射光辐照度积分时，我们常常将连续光积分替换为离散的奇点光之和
+在几何光学中，我们认为光是独立传播的
 
-但是，干涉却让光矢量无法简单叠加，$1+1 \neq 2$
+光是一种横波，光在介质中传播会引起介质粒子振动，若独立传播成立，那么两束光的交叉区域，粒子的振动是两个振动的叠加，这就是**叠加原理**
+
+光的叠加实际上是介质的性质（因为描述的是介质粒子振动的叠加）
+
+- 线性介质：在该介质中，波满足叠加原理
+- 非线性介质：在该介质中，波不满足叠加原理
+
+违反叠加原理的介质是非线性介质，现象是非线性现象，学科是非线性光学
+
+此外，叠加原理只有在低强度光下才成立，因此激光发明后，非线性光学才蓬勃发展
 
 ### 相干叠加
 
@@ -52,7 +61,7 @@ $$
 \mathbf{E_2}=\mathbf{A_2} e^{i(kr_2-\omega t+\varphi _{02})}
 $$
 
-他们相交于点P，P点点电场强度为
+他们相交于点P，根据叠加原理，P点点电场强度为
 $$
 \mathbf{E}=\mathbf{E_1}+\mathbf{E_2}=[\mathbf{A_1}e^{i(kr_1+\varphi_{01})} + \mathbf{A_2}e^{i(kr_2+\varphi_{02})}]e^{-i\omega t}
 $$
@@ -75,6 +84,8 @@ $$
 $$
 
 我们发现，两个光波进行叠加，光强不只是简单叠加，还有一个尾巴，这个尾巴就是**干涉**
+
+干涉：因波的叠加引起强度重新分布的现象
 
 并且我们发现：
 
@@ -126,11 +137,13 @@ $$
 
 ![普通光源相干光](../../images/普通光源相干光.png)
 
-### 杨氏干涉实验
+### 杨氏双缝干涉实验
+
+杨氏实验是通过两个点波光源进行干涉实验的典型
 
 如果光是一种波，那么光在传播过程中应该会有波前（传播最靠前的波阵面），提取一个波前，并将其分为两部分，就能得到两个相干光
 
-现在有一个非常窄的单色光源，经过两个带缝平面，在平面留下明暗条纹
+现在有一个非常窄的单色光源，经过两个带缝平面，会生成两个相干光，进而发生衍射现象，在平面留下明暗条纹
 
 ![杨氏双缝干涉](../../images/杨氏双缝干涉.png)
 
@@ -153,19 +166,50 @@ $$
 
 <img src="../../images/杨氏干涉彩色条纹.png" alt="杨氏干涉彩色条纹" style="zoom:50%;" />
 
-### 菲涅尔双平面镜
+### 其他干涉仪器
+
+本质都是杨氏双缝干涉，条纹间距都满足
+$$
+\Delta x=\frac{D}{d}\lambda
+$$
+
+
+#### 菲涅尔双平面镜
 
 <img src="../../images/菲尼尔双平面镜.png" alt="菲尼尔双平面镜" style="zoom:50%;" />
 
-### 劳埃德镜
+#### 劳埃德镜
 
 <img src="../../images/劳埃德镜.png" alt="劳埃德镜" style="zoom:67%;" />
 
-### 菲涅尔双棱镜
+#### 菲涅尔双棱镜
 
 <img src="../../images/菲涅尔双棱镜.png" alt="菲涅尔双棱镜" style="zoom:50%;" />
 
+### 干涉条纹的移动
+
+我们不仅观测到明暗条纹，还观测到条纹的移动和变化
+
+- 移动光源，对于屏幕上一点，求多少个条纹经过该点
+  - 对于屏幕上点P，经过点P的条纹数取决于两条相干光线的光程差（OPL）
+  - 当光程差增减一个$\lambda$时，就会经过一条条纹
+
+- 移动光源，对于特定的一个条纹，求其移动了多长距离
+  - 杨氏双缝中
+
+$$
+\delta x = -\frac{D}{R}\delta s
+$$
+
+<img src="../../images/条纹移动.png" alt="条纹移动" style="zoom:50%;" />
+
 ## 时空相干性
+
+现实中的普通光源的发光单元为原子、分子，靠自发辐射发光（激光光源靠受激辐射），这是一个随机过程，产生的光是随机、无规律、不相干的。看起来我们无法用普通光源做干涉实验，但实际上杨氏双缝是可以使用普通光源的，因为杨氏双缝中两个光都是由同一束光分割而成的
+
+尽管普通光源的相位随机，但是杨氏双缝两束光的相位差与原光源相位无关，仅与空间位置有关
+
+不过，光源的尺寸和光谱尺寸仍然会对杨氏干涉产生影响
 
 在杨氏干涉中，我们使用了很窄的单色光源，然而现实中光源总是有尺寸，其颜色也不是单色而是光谱中一小段
 
@@ -173,11 +217,39 @@ $$
 
 时间相干性：光谱尺寸对干涉强度的影响（也就是说光不是真的纯色）
 
+### 空间相干性
+
+干涉条纹的衬比度（constrast）定义为
+$$
+\gamma = \frac{I_\max-I_\min}{I_\max + I_\min}
+$$
+任何光源都有一定的宽度，我们将其视为多个不相干的点光源排布，屏幕上的总强度为各个光源的干涉条纹的线性叠加
+
+我们发现沿着x轴方向的长度会让条纹模糊
+
+沿着y轴方向的长度会让亮纹和亮纹重叠，于是条纹更清晰
+
+我们在做杨氏双缝时常常使用平行于y轴方向的光
+
+<img src="../../images/光源宽度.png" alt="光源宽度" style="zoom:50%;" />
+
+### 时间相干性
+
+
+
 ## 薄膜干涉
 
 薄膜干涉（Thin film interference）：光在薄膜表面发生反射和折射，反射光和折射光发生干涉
 
 > 比如彩色太阳眼镜和阳光下的七彩肥皂泡
+
+光线在射向薄膜后会发生反射和透射，透射光可能会再次反射透射，返回薄膜表面，进而和入射光相遇，发生干涉
+
+<img src="../../images/薄膜干涉.png" alt="薄膜干涉" style="zoom:50%;" />
+
+
+
+
 
 ### 等倾斜角干涉
 
