--- a/blog/source/_posts/optics/衍射.md
+++ b/blog/source/_posts/optics/衍射.md
@@ -24,3 +24,76 @@ plugins:
 
 # 七：衍射
 
+## 内容概述
+
+- 衍射（Diffraction），光在传播途中偏移直线传播的过程
+- 惠更斯-菲涅尔原理
+- 定量分析衍射
+- 统一衍射和直线传播
+
+## 衍射
+
+衍射是波的性质，一组平行的波阵面通过小孔，会变成圆形
+
+波长越长，越容易观测到衍射
+
+<img src="../../images/衍射.png" alt="衍射" style="zoom:50%;" />
+
+## 惠更斯-菲涅尔原理
+
+### 惠更斯
+
+惠更斯：波阵面上每一个点，本质上是一个球面次级小波的发射源，下一个波阵面实际上是这些球面的包络线（envelope）
+
+<img src="../../images/惠更斯原理.png" alt="惠更斯原理" style="zoom: 33%;" />
+
+理论的作用
+
+- 根据这个理论，给定一个波阵面，我们可以画出下一个波阵面
+- 解释了光在各向同性介质中的传播原理
+- 解释了反射和折射公式
+
+局限性
+
+- 无法区分光沿直线传播和发生衍射的条件
+- 无法定量分析衍射强度
+- 根据该理论，应该会有反转波
+
+### 菲涅尔
+
+菲涅尔修正了惠更斯的理论
+
+- 波阵面上每一个（无阻塞）点都是球面波的发射源，频率与主波相同
+- 不在波阵面上的点，都是由小波相干叠加得到的
+
+**衍射是无数干涉的叠加**
+
+#### 倾斜因子
+
+惠更斯的理论会应该会存在向后的波，菲涅尔引入了倾斜因子（Tilt factor）
+
+- 若$0 \le \theta \le \pi/2，F=\cos \theta$
+- 若$\theta \ge \pi/2，F=0$
+
+<img src="../../images/倾斜因子.png" alt="倾斜因子" style="zoom:50%;" />
+
+倾斜因子的引入使得向后的波强度为0，自然就不会出现反转波
+
+不过倾斜因子的引入是纯经验，这也是菲涅尔理论的局限性
+
+### 基尔霍夫积分定律
+
+基尔霍夫求解了波动方程，为惠更斯-菲尼尔原理提供了数学基础
+
+<img src="../../images/基尔霍夫求解波动方程.png" alt="基尔霍夫求解波动方程" style="zoom:50%;" />
+
+## 傅立叶变换
+
+## 正弦光栅衍射
+
+## 单缝夫琅禾费衍射
+
+## 小孔夫琅禾费衍射
+
+## 多缝衍射
+
