--- a/blog/source/_posts/optics/几何光学.md
+++ b/blog/source/_posts/optics/几何光学.md
@@ -28,20 +28,24 @@ plugins:
 
 ## 基本定律
 
-- 光沿直线传播
-- 光独立传播（两条光线相遇后，传播方向不变）
-- 入射角等于反射角
-- 光传播是可逆的
+几何光学包含两个部分，一个是光学三定律，定性描述了几何光学中光的传递，一个是费马原理，定量计算了光的传播（通常为光学元件间近轴传播）
 
-- 折射角与入射角有关，与介质折射率有关（折射定律，也被叫做Snell定律）
+### 光学三定律
 
+- 光在均匀介质中沿直线传播
+- 光的反射、折射定律
+  - 反射角等于入射角
+  - 入射角与折射角的正弦值之比等于折射率之比（Snell定律）
+- 光独立传播，光路可逆
+
+Shell定律
 $$
 n_i\sin \theta_i= n_t \sin \theta_t
 $$
 
 ![Snell](/images/Snell.png)
 
-- 反射光线是最短路径（亚历山大）
+反射光线是最短路径（亚历山大）
 
 <img src="/images/亚历山大.png" alt="亚历山大" style="zoom:50%;" />
 
@@ -49,20 +53,60 @@ $$
 
 ### 光程
 
+由于光在介质中移动速度不同，为了方便描述光在介质中移动某段距离要花费的时间，我们引入了光程长度。于是我们在计算时就可以认为光速永远不变，只是光的传播距离与现实距离不同
+
 光程长度（Optical path length，OPL）：光在介质中传播长度与介质的折射率的乘积
 $$
 [l]=ns
 $$
-费马定律（也叫最短时间原则）：
+光程描述的是：光在该介质中移动真实距离所花费的时间，如果在真空中能运动多远的距离
+
+### 费马原理
+
+> 开创了以“路径积分，变分原理“来描述物理规律的思维方式
+
+费马原理（也叫最短时间原则）：
 
 - 光在两点间的传播路径是最短路径（最短路径可以由多条，但是其光程相同）
 - 两点间的光程恒定（光程函数的导数为0）
 
-#### 例题：半球面反射光程
+> 费马原理可以推导出光学三定律
+>
+> 在均匀介质中折射率为常数，光在两点间的传播路径为最短距离，又由于两点间直线距离最短，因此光沿着直线传播
+>
+> 由于反射点、折射点都在交线OO‘上，因此他们在同一平面内（在交线上距离最短）
+>
+> 由于两点间直线最短，沿着反射轴做反射光线的对称直线，发现当反射角等于入射角时，入射光线和对称光线为一条直线
+>
+> 用折射率和三角形长度表示折射光线的光程，该光程应该是最小值，因而导数为0，求导化简得出Shell公式
+
+#### 透镜成像
+
+根据费马原理，两点间光沿着光程最短的路径传播，这说明凸透镜成像中每一条光线的光程都相等
+
+<img src="/images/费马原理透镜.png" alt="费马原理透镜" style="zoom:50%;" />
+
+实际上，凹透镜散射光光线的反向延长线与入射光组成的总光程也是根根相等的
+
+#### 等光程
+
+等光程：如果一个光学器械每条光线都是等光程的（比如透镜），我们称之为等光程，他们可以严格成像
+
+不等光程的器械不能成像，近似光程的器械能成模糊的像
+
+#### 费马原理的应用
+
+反曲椭球面生成平行光：从椭球面焦点发生灯光，会生成平行光，由于平型光不会汇聚，因此他们的光程为无穷大
+
+光在椭球面内反射：在椭球面内，两个焦点间光程为恒定值（毕竟椭圆上的点到两个焦点距离的和为焦距）
+
+双曲透镜将平行光汇聚到一点
+
+半球面反射
 
 ![半球面](/images/半球面.png)
 
-![半球面反射](/images/半球面反射.png)
+
 
 ## 成像
 
