--- a/blog/source/_posts/optics/光学复习.md
+++ b/blog/source/_posts/optics/光学复习.md
@@ -24,3 +24,49 @@ plugins:
 
 # 光学复习
 
+- 相速度
+- 偏振态
+- 费马原理
+- 横向放大率
+- 薄透镜成像
+- 透镜组成像（做图法）
+- 反射过程中的相移
+- 布鲁斯特角
+- 反射光与折射光的偏振态
+- 全反射
+- 相干条件
+- 杨氏双缝干涉
+- 时间、空间相干性
+- 等倾干涉
+- 等厚干涉
+- 迈克尔逊干涉仪
+- 多光束干涉
+- 增反膜与增透膜
+- 惠更斯-菲涅尔原理
+- 衍射的分类
+- 衍射与傅立叶变换
+- 单缝衍射
+- 圆孔衍射
+- Airy斑
+- 瑞丽判据
+- 多缝衍射
+- 光栅方程
+- Abbe成像原理
+- 最小分辨距离、角度
+- 光栅
+- 双折射
+- 惠更斯作图法
+- 波片
+- 光偏振态的改变与检测
+- 黑体辐射与光量子
+
+### 相速度
+
+光传递的速度
+
+$$
+v_p=\frac{\omega}{k}
+$$
+
+### 偏振态
+
