--- a/blog/source/_posts/optics/几何光学.md
+++ b/blog/source/_posts/optics/几何光学.md
@@ -126,6 +126,22 @@ $$
 
 虚像：物体发出的光经过反射、折射后，变成了发散光线，将其反向延长得到的像，被称为虚像（比如凹透镜、平面镜）
 
+### 单心性
+
+从一点发射光源，经过光学系统后，仍然汇聚为一点，那么这个光学系统满足单心性
+
+平面镜反射满足单心性，折射不满足
+
+不满足单心性，物像和图像不共轭，不能完美成像
+
+### 全反射
+
+当光从光密射入光疏，且角度大于某个值后，只发生反射，不发生折射
+
+> 光导纤维
+
+不过光疏介质介质中并没有没有透射波，但这些透射波与界面平行，且振幅在垂直界面方向按指数衰减，于是很快就没了，这个波被称为**隐失波**
+
 ### 人眼为什么能看到虚像
 
 人为什么能看到东西？是因为物体经过眼睛，在视网膜上成了像，在这里，眼睛是成像系统
@@ -137,15 +153,31 @@ $$
 - 共轭性：物像种每个点、线、面都能在图像上找到对应的点、线、面
 - 等光程
 
-### 消球差平面
 
-消球差平面（Aplanatic Surface）：允许所有光线在两点之间以相等的OPL传播的表面
 
-<img src="/images/消球差.png" alt="消球差" style="zoom:50%;" />
+## 棱镜成像
+
+<img src="/images/偏向角.JPG" alt="偏向角" style="zoom:50%;" />
+
+### 
 
 ## 球面成像
 
+尽管球面不是一个很好的光学器械，但比较好加工（其实现在加工技术已经很好了，很多人的眼镜都是非球面的），于是球面成像是几何光学很重要的一块
+
+光轴：若一个光学系统由球面组成，各球心的连线在一条直线上，该光学系统被称为共轴球面系统，这条直线被称为光轴
+
+### 球差
+
+我们上面提到球面不是一个很好的光学器械，因为透镜成像有球差
+
+透镜成像，靠近光轴的光会被汇聚在靠后的位置，远离光轴的光会被汇聚在靠前的位置，也就是透射光经过球面成像后不再汇聚为一点，单心性被破坏
+
+<img src="/images/球差.png" alt="球差" style="zoom:50%;" />
+
 ### 近轴条件
+
+由于球差的存在，我们假设光只在近轴处传播，于是“消除”了球差
 
 近轴条件（paraxial condition）：入射角与光轴（optical axis）的夹角（用$u$表示）小于等于$5^{\circ}$
 
@@ -159,6 +191,22 @@ $$
 \sin u \approx u \\
 \tan u \approx \sin u
 $$
+
+
+
+消球差平面（Aplanatic Surface）：允许所有光线在两点之间以相等的OPL传播的表面
+
+<img src="/images/消球差.png" alt="消球差" style="zoom:50%;" />
+
+### 符号法则
+
+> 简单来说，若左侧的光射向一个左凸的球面在右侧汇聚，距离都是正的
+
+设入射光从左向右
+
+- 若入射点在顶点（球面和光轴的交点）左侧，那么入射点到顶点的距离为正，反之为负
+- 若汇聚点在顶点右侧，那么汇聚点到顶点的距离为正，反之为负
+- 若球心在顶点左侧，则半径为负，反之为正
 
 ### 绘图标准
 
@@ -205,7 +253,7 @@ $$
 
 - 光焦度（用$\Phi$表示）：用与描述光线系统对光线的曲折能力
 
-高斯透镜公式（Gaussian Lens Formula）
+**高斯透镜公式**（Gaussian Lens Formula）
 $$
 \frac{f}{s}+\frac{f'}{s'}=1
 $$
@@ -234,6 +282,10 @@ Imaging for off-axis points
 光轴（Optic axis）：连接两个曲面中心的轴
 
 光学中心（Optic center）：两个球面的基准点（vertex）视为重合，重合点就是光学中心
+
+凸透镜分为双凸、平凸、弯凸三种
+
+凹透镜分为双凹、平凹、弯凹三种
 
 ### 透镜公式
 
