干涉与衍射

--- a/blog/source/_posts/optics/干涉.md
+++ b/blog/source/_posts/optics/干涉.md
@@ -50,6 +50,28 @@ plugins:
 
 此外，叠加原理只有在低强度光下才成立，因此激光发明后，非线性光学才蓬勃发展
 
+### 复振幅叠加法
+
+求解相干光强有三种方法，实际分析时通常使用复振幅法
+
+- 三角函数法：波可以由三角函数表示，对三角函数做恒等变化，即可求相干光强
+- 矢量图解法
+- 复振幅法
+
+首先将三角函数表示为复振幅
+$$
+\tilde{\mathbf{E}_i}=\mathbf{A}_i e^{i\varphi _i}
+$$
+复振幅的叠加
+$$
+\tilde{\mathbf{E}}=\sum_{i=1}^n\tilde{\mathbf{E}_i}
+$$
+合光强
+$$
+I = \tilde{\mathbf{E}}\cdot \tilde{\mathbf{E}}^*
+$$
+
+
 ### 相干叠加
 
 现在有两个相同频率（frequency）相同偏振（polarization）的光波，下面是他们电场强度随时间的变化（用复数表示三角函数）
