--- a/blog/source/_posts/optics/波动光学.md
+++ b/blog/source/_posts/optics/波动光学.md
@@ -93,6 +93,8 @@ $$
 
 ## 波的数学表示
 
+定态波：空间中各点均为同频率的简谐振荡，各点振幅不随时间改变
+
 震荡（Vibration）：物理量围绕其平衡位置进行周期性变化
 
 简谐震荡（Harmonic vibration）：物理量随着时间以三角函数的形式进行震荡
