--- a/blog/source/_posts/optics/电磁波.md
+++ b/blog/source/_posts/optics/电磁波.md
@@ -32,6 +32,25 @@ plugins:
 - 吸收（Absorption），色散（dispersion），折射率（refractive index）
 - 微小粒子导致的散射（Scattering）
 
+## 波
+
+构成波的条件：
+
+- 波源
+- 介质
+- 能量来源
+
+波的性质：
+
+- 时间周期性
+- 空间周期性
+- 能量传播
+
+波的分类
+
+- 标量波
+- 矢量波
+
 ## 光的基本性质
 
 - 光是电磁波
@@ -85,6 +104,8 @@ $$
 - 周期（temporal period，用$T$表示）
 - 角频率（angular frequency，用$\omega$表示）
 - 速度（velocity，用$v$表示）
+
+光是电磁波，其电矢量和磁矢量在做简谐振动，一般情况下，我们只讨论电场强度的变化
 
 #### 粒
 
@@ -217,6 +238,14 @@ $$
 \mathrm{S}=\mathrm{E}\times \mathrm{H}
 $$
 平面波$\mathrm{E}\times \mathrm{H} // \mathrm{k}$
+
+#### 傍轴条件
+
+当$\rho \ll z，r \approx z$
+
+<img src="../../images/傍轴条件.png" alt="傍轴条件" style="zoom:50%;" />
+
+#### 远场条件
 
 #### 辐照度
 
