--- a/blog/source/_posts/optics/衍射.md
+++ b/blog/source/_posts/optics/衍射.md
@@ -26,18 +26,50 @@ plugins:
 
 ## 内容概述
 
-- 衍射（Diffraction），光在传播途中偏移直线传播的过程
+- 衍射（Diffraction），光在传播途中偏移直线传播，强度重新分布的过程
 - 惠更斯-菲涅尔原理
 - 定量分析衍射
 - 统一衍射和直线传播
 
 ## 衍射
 
-衍射是波的性质，一组平行的波阵面通过小孔，会变成圆形
+衍射是光在传播途中偏移直线传播，强度重新分布的过程
+
+> 物体遮挡光线，就会产生阴影
+>
+> 在几何光学中，光线只会被完全遮挡/完全不遮挡，因此阴影应该是清晰的
+>
+> 但现实中的阴影是软阴影，其实就是发生了衍射
+
+<img src="../../images/光的衍射.png" alt="光的衍射" style="zoom:50%;" />
+
+一组平行的波阵面通过小孔，会变成圆形
+
+<img src="../../images/衍射.png" alt="衍射" style="zoom:50%;" />
 
 波长越长，越容易观测到衍射
 
-<img src="../../images/衍射.png" alt="衍射" style="zoom:50%;" />
+- 小孔尺寸在波长的1000倍左右时衍射现象不明显
+- 小孔尺寸在波长的10倍左右时衍射十分明显
+- 小孔尺寸和波场相近时会发生散射
+
+### 衍射的分类
+
+- 菲尼尔衍射：光源和接收屏距离有限
+- 夫朗禾费衍射：光源和接收屏距离无限（也就是入射光是平行光）
+
+夫朗禾费衍射需要用透镜将平行光汇聚
+
+### 干涉与衍射的关系
+
+相同：
+
+- 干涉和衍射都是相干叠加
+
+不同：
+
+- 干涉是离散点光源叠加求和，衍射是连续次波源叠加积分
+- 干涉满足几何光学规律，衍射不满足几何光学规律
 
 ## 惠更斯-菲涅尔原理
 
@@ -71,10 +103,9 @@ plugins:
 #### 倾斜因子
 
 惠更斯的理论会应该会存在向后的波，菲涅尔引入了倾斜因子（Tilt factor）
-
-- 若$0 \le \theta \le \pi/2，F=\cos \theta$
-- 若$\theta \ge \pi/2，F=0$
-
+$$
+F(\theta_0, \theta)=\frac{1}{2}(\cos\theta_0+\cos \theta)
+$$
 <img src="../../images/倾斜因子.png" alt="倾斜因子" style="zoom:50%;" />
 
 倾斜因子的引入使得向后的波强度为0，自然就不会出现反转波
@@ -83,9 +114,17 @@ plugins:
 
 ### 基尔霍夫积分定律
 
-基尔霍夫求解了波动方程，为惠更斯-菲尼尔原理提供了数学基础
+基尔霍夫在倾斜因子的基础上添加了一个常数K，提供了一个$-\pi/2$的相位差
+$$
+K=\frac{e^{-i\pi/2}}{\lambda}
+$$
+于是衍射积分公式转化为：
 
 <img src="../../images/基尔霍夫求解波动方程.png" alt="基尔霍夫求解波动方程" style="zoom:50%;" />
+
+## 巴俾涅原理
+
+
 
 ## 傅立叶变换
 
